[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
chrono-tz = "0.6.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
num = "0.4.0"
structopt = "0.3.25"

[build-dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.0"
glob = "0.3.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["cookies", "blocking"] }
